--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 <div class="card">
                     <br>
                     <img class="big-image center" src="photos/prof">
-                    <a href="https://rhiannayu.github.io/ITWS02-MID1/">
-                        <h4>Spiderman</h4>
+                    <a href="https://darlenetorcelero3.github.io/WSO2-MID1/">
+                        <h4>Oggy</h4>
                     </a>
                 </div>
             </div> <br> <br> <br> <br>
