--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="card">
                     <br>
                     <img class="big-image center" src="oggy.jpg">
-                    <a href="https://darlenetorcelero3.github.io/WSO2-MID1/">
+                    <a href="https://darlenetorcelero3.github.io/WS02-MID1/">
                         <h4>Oggy</h4>
                     </a>
                 </div>
