--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <div class="card">
                     <br>
                     <img class="big-image center" src="mario.jpg">
-                    <a href="https://ferdierufino1503.github.io/WSO2-MID1/">
-                        <h4>Mario</h4>
+                    <a href="https://roseannnapicog.github.io/WS02-MID1.github.io/">
+                        <h4>Gojo Satoru</h4>
                     </a>
                 </div>
                 <div class="card">
