--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="card">
                     <br>
-                    <img class="big-image center" src="oggy.jpg">
+                    <img class="big-image center" src="profroan.png">
                     <a href="https://darlenetorcelero3.github.io/WS02-MID1/">
                         <h4>Oggy</h4>
                     </a>
