--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div class="container">
                 <div class="card">
                     <br>
-                    <img class="big-image center" src="mario.jpg">
+                    <img class="big-image center" src="profroan.png">
                     <a href="https://roseannnapicog.github.io/WS02-MID1.github.io/">
                         <h4>Gojo Satoru</h4>
                     </a>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="card">
                     <br>
-                    <img class="big-image center" src="profroan.png">
+                    <img class="big-image center" src="oggy.jpg">
                     <a href="https://darlenetorcelero3.github.io/WS02-MID1/">
                         <h4>Oggy</h4>
                     </a>
